# modular-api

./: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile-uv  Makefile  README.md  entrypoint.sh  modular.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml
deployment/helm/modular-api/: Chart.yaml  values.yaml
deployment/helm/modular-api/templates/: configmap.yaml  deployment.yaml  service.yaml
docs/docs_converter/: CHANGELOG.md  CUSTOMIZATION.md  README.md
docs/docs_converter/examples/: commands.sh
docs/docs_converter/src/: __init__.py  convert_md_to_docx.py
docs/docs_converter/src/styles/: docx_styles.py  style_config.py
docs/docs_generator/: CHANGELOG.md  README.md  requirements.txt
docs/docs_generator/examples/: commands.sh
docs/docs_generator/src/: generate_cli_docx.py
docs/docs_generator/src/converters/: md_to_docx_converter.py
modular_api/: .env.example  commands_generator.py  index.py  version.py
modular_api/helpers/: compatibility_check.py  constants.py  file_helper.py  jwt_auth.py  log_helper.py  params_converter.py
modular_api/models/: __init__.py  refresh_token_model.py  stats_model.py
modular_api/services/: environment_service.py  group_service.py  install_service.py  permissions_cache_service.py  policy_service.py  refresh_token_service.py
modular_api/web_service/: iam.py  response_processor.py
modular_api_cli/modular_cli_group/: user.py
modular_api_cli/modular_handler/: usage_handler.py  user_handler.py
patches/4.0.0/: main.py  main_dynamodb.py
(+4 files in other folders)
