[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "modular-api"
description = "Modular API"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    'toml==0.10.2',
    'gunicorn==23.0.0',
    'bottle==0.13.4',
    'click==8.3.0',
    'tenacity==8.4.1',
    'ddtrace==3.9.4',
    'packaging>=25',
    'prettytable==3.9.0',
    'PyJWT==2.8.0',
    'pynamodb==6.1.0',
    'python-dateutil>=2.9.0.post0',
    'typing-extensions>=4.10.0,<5.0.0',
    'limits==5.6.0',
    'modular-sdk==7.1.4',
    'python-dotenv==1.0.1',
    'modular-cli-sdk==3.1.0'
]
[dependency-groups]
dev = [
    "tox==3.24.5",
    "pyflakes==2.4.0",
    "flake8==4.0.1"
]

[project.scripts]
modular = "modular_api_cli.modular_cli_group.modular:modular"

[tool.setuptools.dynamic]
version = {attr = "modular_api.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["modular_api*", "modular_api_cli*"]

[tool.pyright]
include = ["modular_api", "modular_api_cli"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"

[tool.ruff]
line-length = 79
src = ["modular_api", "modular_api_cli"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
